Fix footer
-Removed footer from all pages aside from home
-Fixed home footer not showing up in phone version

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -684,11 +684,9 @@ footer>a{
     .footer-section {
         display: flex;
         flex-direction: column;
-
     }
     
     .f-enlaces {
-        display: none;
         color: #ffffff;
     }
 
@@ -981,7 +979,7 @@ footer>a{
     }
 
     .contact > * {
-        margin: 70px 0px;   /* espacio uniforme entre elementos */
+        margin: 35px 0px;   /* espacio uniforme entre elementos */
         padding: 0;      /* sin padding adicional */
     }
     
@@ -999,8 +997,9 @@ footer>a{
     }
     
     .footer-section {
+        margin-top: 0px;
+        margin-bottom: 35px;
         flex-direction: column;
-        display: none;
     }
     
     .f-enlaces a {
@@ -1074,7 +1073,7 @@ footer>a{
 
   .title {
     font-size: 26px;
-    margin: 10px 0;
+    margin: 30px 0;
   }
 
   .header p {
@@ -1156,6 +1155,8 @@ footer>a{
   }
 
   .footer-section {
+    margin-top: 0px;
+    margin-bottom: 35px;
     flex-direction: column;
   }
 
@@ -1449,13 +1450,6 @@ footer>a{
         height: auto;
     }
 
-    .sitemap_footer{
-        font-size: 2rem;
-    }
-
-    footer>a{
-        font-size: 2rem;
-    }
 }
 
 /* Task */
